<resources>
    <string name="app_name">Farm Expert</string>
    <string name="login">Login</string>
    <string name="auth_welcome">Log in with your Farm Expert account or register in order to start using the app
    </string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="unknown_error">An unknown error has occurred</string>
    <string name="farm_creation_date">Created at: %s</string>
    <string name="or">OR</string>
    <string name="err_empty_farm_name">Farm name cannot be empty</string>
    <string name="err_access_code_invalid">Access code length must have at least 4 digits</string>
    <string name="hint_farm_name">Farm name</string>
    <string name="hint_access_code_4_6_digits">Access code (4–6 digits)</string>
    <string name="create_new_farm">Create</string>
    <string name="create_farm_guideline">Please type in the details of the farm you want to create or join</string>
    <string name="join_existing_farm">Join</string>
    <string name="or_select_one_of_your_previous_farms">Or, select one of your previous farms:</string>
    <string name="configuration_activity_title">Farm configurations</string>
    <string name="finish_action">Finish</string>
    <string name="view">View</string>
    <string name="settings">Settings</string>
    <string name="nav_statistics">Statistics</string>
    <string name="planner">Planner</string>
    <string name="dashboard">Dashboard</string>
    <plurals name="days">
        <item quantity="one">1 day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <string name="dashboard_headcount">Headcount</string>
    <string name="dashboard_graph_births">Births</string>
    <string name="dashboard_graph_breedings">Breedings</string>
    <string name="dashboard_graph_disinfections">Disinfections</string>
    <string name="dashboard_graph_vitaminisations">Vitaminizations</string>
    <string name="dashboard_graph_vaccinations">Vaccinations</string>
    <string name="dashboard_graph_pedicures">Pedicures</string>
    <string name="dashboard_graph_treatments">Treatments</string>
    <string name="animal_id">ID</string>
    <string name="gender">Gender</string>
    <string name="race">Race</string>
    <string name="father_id">Father ID</string>
    <string name="mother_id">Mother ID</string>
    <string name="add_animal_title">Add animal</string>
    <string name="dialog_add_positive_btn">Add</string>
    <string name="dialog_cancel_btn">Cancel</string>
    <string name="err_adding_animal">Error adding animal</string>
    <string name="err_adding_animal_message">Invalid ID number. The animal was not saved.</string>
    <string name="err_adding_animal_constraint">Error adding animal. Another animal with the same ID was found.</string>
    <string name="empty_list">No items in the list</string>
    <string name="item_added">Item successfully added</string>
    <string name="item_deleted">Item successfully deleted</string>
    <string name="empty_text" />
    <string name="lorem_ipsum">Lorem ipsum</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="delete_animal">Are you sure you want to delete this animal?</string>
    <string name="delete_animal_message">All actions related to it will be deleted.\nAnimal ID: %s</string>
    <string name="headcount_title">Headcount, %d animals</string>
    <string name="father_father_id">Father-Father ID</string>
    <string name="father_mother_id">Father-Mother ID</string>
    <string name="mother_father_id">Mother-Father ID</string>
    <string name="mother_mother_id">Mother-Mother ID</string>
    <string name="err_updating_animal">An error occurred updating the field</string>
    <string name="add_birth_title">Add birth</string>
    <string name="calf_id">Calf ID Number</string>
    <string name="note">Note</string>
    <string name="maleInputHint">Male ID / Name</string>
    <string name="details">Details</string>
    <string name="err_validating_calf">Could not validate calf ID</string>
    <string name="error_inexistent_farm_id">An error occurred. Farm ID could not be read.</string>
    <string name="err_adding_record">An error occurred adding a new item. Please try again later.</string>
    <string name="gender_unknown">Unknown</string>
    <string name="err_adding_animal_from_birth">Error creating a new animal for this birth</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="add_vitaminization_title">Add vitaminization</string>
    <string name="add_breeding_title">Add breeding</string>
    <string name="add_vaccination_title">Add vaccination</string>
    <string name="add_treatment_title">Add treatment</string>
    <string name="add_disinfection_title">Add disinfection</string>
    <string name="add_pedicure_title">Add pedicure</string>
    <string name="estimated_birth">Estimated birth:</string>
    <string name="delete_confirmation_request">Are you sure you want to delete this item?</string>
    <string name="err_deleting_item">An error occurred trying to delete the item</string>
    <string name="dialog_update_btn">Update</string>
    <string name="edit_birth_title">Edit birth</string>
    <string name="edit_breeding_title">Edit breeding</string>
    <string name="edit_pedicure_title">Edit pedicure</string>
    <string name="edit_animal_action_title">Edit animal action</string>
    <string name="edit_vitaminization_title">Edit vitaminization</string>
    <string name="edit_vaccination_title">Edit vaccination</string>
    <string name="edit_treatment_title">Edit treatment</string>
    <string name="edit_disinfection_title">Edit disinfection</string>
    <string name="default_birth_note">4 - No problems</string>
    <string name="default_breeding_note">5 - Normal heats</string>
    <string name="err_updating_record">An error occurred updating the item. Please try again later.</string>
    <string name="item_updated">Item successfully updated</string>
    <string name="err_retrieving_items">Error while retrieving data. Please try again later.</string>
    <string name="err_retrieving_reminders">Error while retrieving custom reminders. Please try again later.</string>
    <string name="search_id">Search ID…</string>
    <string name="planner_item_details_hint">Details</string>
    <string name="planner_item_add_title">Add custom reminder</string>
    <string name="dialog_add_negative_btn">Close</string>
    <string name="jan">JAN</string>
    <string name="feb">FEB</string>
    <string name="mar">MAR</string>
    <string name="apr">APR</string>
    <string name="may">MAY</string>
    <string name="jun">JUN</string>
    <string name="jul">JUL</string>
    <string name="aug">AUG</string>
    <string name="sep">SEP</string>
    <string name="oct">OCT</string>
    <string name="nov">NOV</string>
    <string name="dec">DEC</string>
    <string name="err_animal_not_exists">The selected animal does not exists in this farm.\n\nPress OK to go back on the graph screen.</string>
    <string name="planner_heats_title">Heat Cycle</string>
    <string name="planner_reprod_control_title">Reproduction Control</string>
    <string name="planner_disinfections_title">Disinfections</string>
    <string name="planner_vaccinations_title">Vaccines</string>
    <string name="planner_heats_reason">The animal might be in heat cycle.</string>
    <string name="planner_gest_ctrl_reason">%d days since the last breeding</string>
    <string name="planner_physiological_ctrl_reason">%d days since the last birth</string>
    <string name="planner_first_vaccine_reason">%d days since the last birth</string>
    <string name="planner_before_birth_vaccine_reason">%d days before the estimated day of birth</string>
    <string name="go_to">GO TO:</string>
    <string name="change_farm">Change farm</string>
    <string name="logout">Logout</string>
    <string name="change_farm_confirmation_message">You are about to sign out from this farm and return to farm selector screen. You will see there all your subscriptions.</string>
    <string name="confirm_button">Confirm</string>
    <string name="logout_confirmation_message">You will be returned back to the login screen. Are you sure you want to log out?</string>
    <string name="err_logging_out">Sorry, an error occurred while logging you out. Please try again later.</string>
    <string name="user_profile">Your profile</string>
    <string name="user_not_available">Your user profile is not available at the moment. Please try again later.</string>
    <string name="user_creation_date">Created on %s</string>
    <string name="profile_created_with_provider">Profile created with %s</string>
    <string name="name_header">Name</string>
    <string name="phone_header">Phone</string>
    <string name="email_header">Email</string>
    <string name="email_provider">email and password</string>
    <string name="google_provider">Google</string>
    <string name="phone_provider">phone number</string>
    <string name="unknown_provider">an unknown provider</string>
    <string name="add_name">Tap to set your name</string>
    <string name="add_email">Tap to set your email</string>
    <string name="farms_header">Subscribed farms</string>
    <string name="err_retrieving_farms">Error while checking your farms</string>
    <string name="update_username_title">Update your name</string>
    <string name="set_username_title">Set your name</string>
    <string name="update_email_title">Update your email</string>
    <string name="set_email_title">Set your email</string>
    <string name="profile_load_unsuccessful">Your profile could not be load right now. Please try again later.\nError: %s</string>
    <string name="send_verification_email">Send verification email</string>
    <string name="set">Set</string>
    <string name="after_email_change_message">Your email address was updated. Please check your inbox in order to verify it. Press OK to go back to your profile.</string>
    <string name="pass_reset_header">Password reset</string>
    <string name="pass_reset_message">Tap to send a password reset email</string>
    <string name="password_reset_success">The request was successful. Please check your inbox.</string>
    <string name="delete_account_header">Delete account</string>
    <string name="delete_account_message">Warning! Deleting your account is an irreversible process.</string>
    <string name="delete_account_confirmation">Are you sure you want to delete your account? This operation cannot be undone.</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="current_farm">• Current farm</string>
    <string name="farm_subscribers_count">Subscribers count: %d</string>
    <string name="you_are_the_owner">You are the owner</string>
    <string name="unsubscribe_confirmation_message">Are you sure you want to unsubscribe?</string>
    <string name="unsubscribe_current_farm_confirmation_message">This farm is your currently joined farm. If you otp to unscubscribe you will be redirected to select or create another farm. Are you sure you want to unsubscribe?</string>
    <string name="email_verification_success">Email verification sent</string>
    <string name="animal_details_title">Animal Details</string>
    <string name="app_version_header">%s app version</string>
    <string name="farm_already_exists">Farm name already exists in the database</string>
    <string name="change_farm_name">Change name</string>
    <string name="farm_does_not_exists">Farm \"%s\" doesn\'t or the access code is incorrect</string>
    <string name="review_inputs">Review inputs</string>
    <string name="error">Error</string>
    <string name="add_reminder">Reminder</string>
    <string name="add">Add</string>
    <string-array name="gender_types_values">
        <item>Unknown</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>