<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/GraphHeaderStyle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <View style="@style/GraphVerticalDivider.Header" />

    <TextView style="@style/FarmExpertTextStyle.Graph.Header.AnimalActions" />

    <View style="@style/GraphVerticalDivider.Header" />

    <TextView
        style="@style/FarmExpertTextStyle.Graph.Header.Month.AnimalActions"
        android:text="@string/jan" />

    <View style="@style/GraphVerticalDivider.Header" />

    <TextView
        style="@style/FarmExpertTextStyle.Graph.Header.Month.AnimalActions"
        android:text="@string/feb" />

    <View style="@style/GraphVerticalDivider.Header" />

    <TextView
        style="@style/FarmExpertTextStyle.Graph.Header.Month.AnimalActions"
        android:text="@string/mar" />

    <View style="@style/GraphVerticalDivider.Header" />

    <TextView
        style="@style/FarmExpertTextStyle.Graph.Header.Month.AnimalActions"
        android:text="@string/apr" />

    <View style="@style/GraphVerticalDivider.Header" />

    <TextView
        style="@style/FarmExpertTextStyle.Graph.Header.Month.AnimalActions"
        android:text="@string/may" />

    <View style="@style/GraphVerticalDivider.Header" />

    <TextView
        style="@style/FarmExpertTextStyle.Graph.Header.Month.AnimalActions"
        android:text="@string/jun" />

    <View style="@style/GraphVerticalDivider.Header" />

    <TextView
        style="@style/FarmExpertTextStyle.Graph.Header.Month.AnimalActions"
        android:text="@string/jul" />

    <View style="@style/GraphVerticalDivider.Header" />

    <TextView
        style="@style/FarmExpertTextStyle.Graph.Header.Month.AnimalActions"
        android:text="@string/aug" />

    <View style="@style/GraphVerticalDivider.Header" />

    <TextView
        style="@style/FarmExpertTextStyle.Graph.Header.Month.AnimalActions"
        android:text="@string/sep" />

    <View style="@style/GraphVerticalDivider.Header" />

    <TextView
        style="@style/FarmExpertTextStyle.Graph.Header.Month.AnimalActions"
        android:text="@string/oct" />

    <View style="@style/GraphVerticalDivider.Header" />

    <TextView
        style="@style/FarmExpertTextStyle.Graph.Header.Month.AnimalActions"
        android:text="@string/nov" />

    <View style="@style/GraphVerticalDivider.Header" />

    <TextView
        style="@style/FarmExpertTextStyle.Graph.Header.Month.AnimalActions"
        android:text="@string/dec" />

    <View style="@style/GraphVerticalDivider.Header" />

</LinearLayout>