<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/view">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/dashboardFragment"
                    android:checkable="false"
                    android:icon="@drawable/ic_dashboard_black_24dp"
                    android:title="@string/dashboard" />
                <item
                    android:id="@+id/plannerFragment"
                    android:checkable="false"
                    android:icon="@drawable/ic_event_note_black_24dp"
                    android:title="@string/planner" />
                <!--<item-->
                <!--android:id="@+id/statisticsFragment"-->
                <!--android:checkable="false"-->
                <!--android:icon="@drawable/ic_assessment_black_24dp"-->
                <!--android:title="@string/nav_statistics" />-->
            </group>
        </menu>
    </item>

    <item android:title="@string/settings">
        <menu>
            <group android:checkableBehavior="single">
                <item
                  android:id="@+id/changeFarm"
                  android:checkable="false"
                  android:icon="@drawable/baseline_flip_camera_android_black_48"
                  android:title="@string/change_farm" />

                <item
                  android:id="@+id/logOut"
                  android:checkable="false"
                  android:icon="@drawable/baseline_open_in_new_black_48"
                  android:title="@string/logout" />
            </group>
        </menu>
    </item>

</menu>
