<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/graph_header_border">

    <View
        android:layout_width="@dimen/separator_height_1dp"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray" />

    <TextView style="@style/FarmExpertTextStyle.Graph.Header.Breedings.Female" />

    <View
        android:layout_width="@dimen/separator_height_1dp"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray" />

    <TextView style="@style/FarmExpertTextStyle.Graph.Header.Breedings.Male" />

    <View
        android:layout_width="@dimen/separator_height_1dp"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray" />

    <TextView
        style="@style/FarmExpertTextStyle.Graph.Header.Month.Breedings"
        android:text="@string/jan" />

    <View
        android:layout_width="@dimen/separator_height_1dp"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray" />

    <TextView
        style="@style/FarmExpertTextStyle.Graph.Header.Month.Breedings"
        android:text="@string/feb" />

    <View
        android:layout_width="@dimen/separator_height_1dp"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray" />

    <TextView
        style="@style/FarmExpertTextStyle.Graph.Header.Month.Breedings"
        android:text="@string/mar" />

    <View
        android:layout_width="@dimen/separator_height_1dp"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray" />

    <TextView
        style="@style/FarmExpertTextStyle.Graph.Header.Month.Breedings"
        android:text="@string/apr" />

    <View
        android:layout_width="@dimen/separator_height_1dp"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray" />

    <TextView
        style="@style/FarmExpertTextStyle.Graph.Header.Month.Breedings"
        android:text="@string/may" />

    <View
        android:layout_width="@dimen/separator_height_1dp"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray" />

    <TextView
        style="@style/FarmExpertTextStyle.Graph.Header.Month.Breedings"
        android:text="@string/jun" />

    <View
        android:layout_width="@dimen/separator_height_1dp"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray" />

    <TextView
        style="@style/FarmExpertTextStyle.Graph.Header.Month.Breedings"
        android:text="@string/jul" />

    <View
        android:layout_width="@dimen/separator_height_1dp"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray" />

    <TextView
        style="@style/FarmExpertTextStyle.Graph.Header.Month.Breedings"
        android:text="@string/aug" />

    <View
        android:layout_width="@dimen/separator_height_1dp"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray" />

    <TextView
        style="@style/FarmExpertTextStyle.Graph.Header.Month.Breedings"
        android:text="@string/sep" />

    <View
        android:layout_width="@dimen/separator_height_1dp"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray" />

    <TextView
        style="@style/FarmExpertTextStyle.Graph.Header.Month.Breedings"
        android:text="@string/oct" />

    <View
        android:layout_width="@dimen/separator_height_1dp"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray" />

    <TextView
        style="@style/FarmExpertTextStyle.Graph.Header.Month.Breedings"
        android:text="@string/nov" />

    <View
        android:layout_width="@dimen/separator_height_1dp"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray" />

    <TextView
        style="@style/FarmExpertTextStyle.Graph.Header.Month.Breedings"
        android:text="@string/dec" />

    <View
        android:layout_width="@dimen/separator_height_1dp"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray" />

    <TextView style="@style/FarmExpertTextStyle.Graph.Header.EstimatedBirth" />

    <View
        android:layout_width="@dimen/separator_height_1dp"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray" />

</LinearLayout>