<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:title="@string/lorem_ipsum" />

    </com.google.android.material.appbar.AppBarLayout>

    <ProgressBar
        android:id="@+id/loadingView"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/barLayout"
        tools:visibility="visible" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/FarmExpertInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginTop="@dimen/xxxl_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:hint="@string/email_header"
        app:counterEnabled="true"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userEmailBox"
            style="@style/FarmExpertEditTextStyle"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/updateBtn"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginTop="@dimen/large_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:enabled="false"
        android:text="@string/update"
        tools:enabled="true" />

    <View
        android:id="@+id/emailVerifiedSeparator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginTop="@dimen/xl_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:background="@android:color/darker_gray" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sendVerificationEmailBtn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginTop="@dimen/large_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:text="@string/send_verification_email" />

</LinearLayout>