<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin">

        <TextView
            android:id="@+id/currentFarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:paddingBottom="@dimen/tiny_margin"
            android:text="@string/current_farm"
            android:textColor="@color/red"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/farmName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/black"
            android:textSize="@dimen/large_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/ownerStatus"
            app:layout_constraintTop_toBottomOf="@id/currentFarm"
            tools:text="@string/app_name" />

        <TextView
            android:id="@+id/createdAt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tiny_margin"
            android:fontFamily="@font/roboto"
            android:textColor="@color/black"
            android:textSize="@dimen/text_16"
            app:layout_constraintTop_toBottomOf="@id/farmName"
            tools:text="Created at: 12.12.2012" />

        <TextView
            android:id="@+id/subscribersCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tiny_margin"
            android:fontFamily="@font/roboto"
            android:textColor="@color/black"
            android:textSize="@dimen/text_16"
            app:layout_constraintTop_toBottomOf="@id/createdAt"
            tools:text="Number of subscribers: 5" />

        <TextView
            android:id="@+id/ownerStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/you_are_the_owner"
            android:textColor="@color/sea_green"
            android:textSize="@dimen/medium_text"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/farmName"
            app:layout_constraintLeft_toRightOf="@id/farmName"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/farmName"
            tools:visibility="visible" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/unsubscribeBtn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginEnd="@dimen/tiny_margin"
            android:text="@string/unsubscribe"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/deleteBtn"
            app:layout_constraintTop_toBottomOf="@id/subscribersCount" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/deleteBtn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/tiny_margin"
            android:text="@string/delete"
            android:textColor="@color/red"
            app:rippleColor="@android:color/holo_red_light"
            android:visibility="gone"
            app:layout_constraintLeft_toRightOf="@id/unsubscribeBtn"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/unsubscribeBtn"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>